Fixed layout problem for custom keyboards and string conversion

--- a/src/core/src/components/keyboard/keyboard.component.scss
+++ b/src/core/src/components/keyboard/keyboard.component.scss
@@ -56,6 +56,7 @@ $mat-keyboard-padding: 14px 24px !default;
     box-sizing: border-box;
     flex: 1 1 auto;
     padding: $mat-keyboard-button-distance / 2;
+    width: 100%;
   }
 
   &-key {
